# zetton

./: .gitignore  CONTRIBUTING.md  COPYRIGHT  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: index.html  zetton demo.html
examples/: DEMO_GUIDE.md  path_constraints.json  zetton_demo.sh
examples/samples/: aes_report.html  classical_capture.pcap  pqc_capture.pcap  pqc_chrome.pcap  pqc_report.html  sample_aes_ecb.c  sample_aes_ecb_zetton_report.html  sample_network_vuln.c  sample_pqc.c  sample_pqc_zetton_report.html
zetton/: LICENSE  README.md  __init__.py  cli.py  pyproject.toml  storage.py
zetton/analyzers/: __init__.py  cfg.py  dataflow.py  disasm.py
zetton/core/: __init__.py  binary.py  config.py  project.py
zetton/crypto/: __init__.py  constants.py  crypto.py  identify.py
zetton/examples/: demo.py
zetton/forensics/: __init__.py  crypto.py  report.py  timeline.py
zetton/formatters/: __init__.py  _logo.py  html_formatter.py  markdown_formatter.py
zetton/loaders/: __init__.py  macho.py  pe.py
zetton/quantum/: __init__.py  circuits.py  engine.py  grover.py  qaoa.py
zetton/tests/: test_zetton.py
zetton/utils/: __init__.py
zetton/zetton/: __init__.py  cli.py
zetton/zetton.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
zetton/zetton/analyzers/: __init__.py  disasm.py
zetton/zetton/core/: __init__.py  binary.py
zetton/zetton/crypto/: constants.py  identify.py
zetton/zetton/forensics/: __init__.py
zetton/zetton/loaders/: macho.py
zetton/zetton/quantum/: circuits.py  qaoa.py
zetton/zetton/utils/: __init__.py
