[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zetton"
version = "0.1.0"
description = "Quantum-Assisted Binary Analysis Framework - A quantum version of Ghidra"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Keeban", email = "keeban.villarreal@my.utsa.edu"}
]
maintainers = [
    {name = "UTSA Cyber Jedis Quantum Cybersecurity RIG"}
]
keywords = [
    "quantum computing",
    "binary analysis",
    "reverse engineering",
    "malware analysis",
    "cybersecurity",
    "quantum cryptanalysis",
    "post-quantum cryptography"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Disassemblers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "qiskit-ibm-runtime>=0.17.0",
    "amazon-braket-sdk>=1.70.0",
    "lief>=0.14.0",
    "capstone>=5.0.0",
    "pycryptodome>=3.19.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pylint>=3.0.0",
]

forensics = [
    "volatility3>=2.5.0",
    "yara-python>=4.3.0",
]

visualization = [
    "matplotlib>=3.8.0",
    "networkx>=3.2.0",
]

all = [
    "zetton[dev,forensics,visualization]",
]

[project.urls]
Homepage = "https://github.com/keebanvillarreal/zetton"
Documentation = "https://github.com/keebanvillarreal/zetton/blob/main/README.md"
Repository = "https://github.com/keebanvillarreal/zetton"
"Bug Tracker" = "https://github.com/keebanvillarreal/zetton/issues"

[project.scripts]
zetton = "zetton.cli:main"
zetton-analyze = "zetton.cli:analyze"
zetton-quantum = "zetton.quantum.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zetton*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
zetton = ["py.typed", "config/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=zetton",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["zetton"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
]

[tool.pylint.format]
max-line-length = 100
