[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zetton"
version = "0.1.0"
description = "Quantum-Assisted Binary Analysis Framework for Digital Forensics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Zetton Contributors"}
]
keywords = [
    "quantum computing",
    "reverse engineering",
    "binary analysis",
    "digital forensics",
    "cryptanalysis",
    "post-quantum cryptography"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Quantum Computing
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    
    # Binary Analysis
    "capstone>=5.0.0",        # Disassembly engine
    "lief>=0.14.0",           # Binary parsing (ELF, PE, Mach-O)
    "keystone-engine>=0.9.2", # Assembly engine
    
    # Data Processing
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "networkx>=3.0",          # Control flow graphs
    
    # Cryptography
    "pycryptodome>=3.19.0",
    "cryptography>=41.0.0",
    
    # Utilities
    "rich>=13.0.0",           # Terminal formatting
    "click>=8.1.0",           # CLI framework
    "pydantic>=2.0.0",        # Data validation
    "tqdm>=4.66.0",           # Progress bars
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
hardware = [
    "qiskit-ibm-runtime>=0.15.0",  # IBM Quantum hardware access
    "amazon-braket-sdk>=1.50.0",   # AWS Braket access
]

[project.scripts]
zetton = "zetton.cli:main"

[project.urls]
"Homepage" = "https://github.com/zetton-framework/zetton"
"Bug Reports" = "https://github.com/zetton-framework/zetton/issues"
"Documentation" = "https://zetton.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["zetton*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
